[package]
name = "median-tps"
version = "0.1.0"
edition = "2021"

[dependencies]
substrate-api-client = { version = "0.17.0", features = ["std", "ws-client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp-core = { git = "https://github.com/Allfeat/polkadot-sdk.git", branch = "allfeat-polkadot-v1.9.0" }
sp-runtime = { git = "https://github.com/Allfeat/polkadot-sdk.git", branch = "allfeat-polkadot-v1.9.0" }
sp-arithmetic = { git = "https://github.com/Allfeat/polkadot-sdk.git", branch = "allfeat-polkadot-v1.9.0" }
sp-std = { git = "https://github.com/Allfeat/polkadot-sdk.git", branch = "allfeat-polkadot-v1.9.0" }
ac-primitives = { version = "0.9" }
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4.3"
